syntax = "proto3";

option csharp_namespace = "GrpcStreamServer";

package number;

// The greeting service definition.
service StreamNumber {
  // Sends a greeting
  rpc SendNumber (SendNumberRequest) returns (stream NumberReply);
}

message SendNumberRequest {
 int32 value = 1;
}

message NumberReply {
	int32 result = 1;
}